# OpenPlaque

./: .gitignore  .requirements  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements-colab.txt
colab/: coronary_segmentation.py  helpers.py  openplaque_colab.py  setup.py
data/: README.md
docs/: 5fold_cv_boundary_tuning_notes.md  5fold_cv_cached_prediction_notes.md  bayesian_boundary_parameter_tuning.md  boundary_parameter_tuning_cached_predictions.md  boundary_refinement_notes.md  boundary_refinement_tuning.md  coronary_segmentation_model_survey.md  cv_boundary_tuning_notes.md  default_boundary_refinement.md  plaque_characterization.md  run_optimized_boundary_on_new_data.md  v0_2_notes.md  v0_3_boundary_tuning_notes.md  volume_based_boundary_tuning.md  volume_based_default_refinement.md
models/: model.yaml
notebooks/: 01_OpenPlaque.ipynb  01_OpenPlaqueStudy.md  01_openplaque_colab.ipynb  03_CoronarySegmentation.ipynb  04_End_to_End_OpenPlaque_Segmentation.ipynb  05_End_to_End_OpenPlaque_AutoSeries_Uncertainty_HTML.ipynb  05_End_to_End_OpenPlaque_v0_2_AutoSeries_Uncertainty_HTML.ipynb  05_Validate_Model.ipynb  05_base.ipynb  06_BoundaryRefinement_Tuning.ipynb  06_Boundary_Refinement_Parameter_Tuning.ipynb  06_Boundary_Refinement_Parameter_Tuning_STANDALONE.ipynb  06_Boundary_Refinement_Parameter_Tuning_STANDALONE_WORKING.ipynb  07_5Fold_CV_Boundary_Parameter_Selection_CachedPredictions_GitHub.ipynb  07_5Fold_CV_Boundary_Parameter_Selection_Clean_Colab.ipynb  07_5Fold_CV_Boundary_Parameter_Selection_Clean_Colab_GitHub.ipynb  BoundaryRefinement_example.md  (+12 more)
(+35 files in other folders)
